fixed medium screen size social links alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -531,6 +531,13 @@ footer {
     }
 }
 
+@media (max-width:992px) {
+    .social-links {
+        line-height: 25px;
+        text-align: center;
+    }
+}
+
 #follow {
     color: #ffffff;
     font-family: "Kavoon", sans-serif;
